--- a/index.html
+++ b/index.html
@@ -3,33 +3,69 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Coming Soon</title>
+  <title>Dilkhush Kitchen | Coming Soon</title>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
   <style>
-    body {
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #0a0a0a;
-      color: #fff;
+    }
+
+    body {
+      font-family: 'Open Sans', sans-serif;
+      background: url('https://images.unsplash.com/photo-1604908177450-40f6b93375c7?auto=format&fit=crop&w=1920&q=80') no-repeat center center fixed;
+      background-size: cover;
+      height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 100vh;
-      flex-direction: column;
+      color: white;
       text-align: center;
+      backdrop-filter: brightness(0.6);
     }
+
+    .overlay {
+      background: rgba(0, 0, 0, 0.6);
+      padding: 3rem 2rem;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
+      max-width: 600px;
+    }
+
     h1 {
-      font-size: 3em;
-      margin: 0.2em 0;
+      font-family: 'Merriweather', serif;
+      font-size: 3rem;
+      color: #ffcc00;
+      margin-bottom: 1rem;
     }
+
+    h2 {
+      font-size: 1.5rem;
+      font-weight: normal;
+      margin-bottom: 1.5rem;
+    }
+
     p {
-      font-size: 1.2em;
-      color: #ccc;
+      font-size: 1rem;
+      color: #e0e0e0;
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 2rem;
+      }
+      h2 {
+        font-size: 1.2rem;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>🚧 Coming Soon</h1>
-  <p>Our website is under construction. Stay tuned!</p>
+  <div class="overlay">
+    <h1>Dilkhush Kitchen</h1>
+    <h2>Authentic Indian Cuisine</h2>
+    <p>We're cooking up something special! Our website is coming soon.</p>
+  </div>
 </body>
 </html>
