--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     body {
       font-family: 'Open Sans', sans-serif;
-      background: url('https://images.unsplash.com/photo-1605475033492-692d0b4646e5?auto=format&fit=crop&w=1920&q=80') no-repeat center center fixed;
+      background: url('https://images.pexels.com/photos/954677/pexels-photo-954677.jpeg') no-repeat center center fixed;
       background-size: cover;
       min-height: 100vh;
       display: flex;
