--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
       box-shadow: 0 0 20px rgba(0,0,0,0.5);
     }
 
-    h1 {
-      font-family: 'Merriweather', serif;
-      font-size: 2.5rem;
-      color: #ffcc00;
-      margin-bottom: 0.5rem;
+    .logo {
+      max-width: 100%;
+      height: auto;
+      margin-bottom: 1rem;
     }
 
     h2 {
@@ -53,8 +52,8 @@
     }
 
     @media (max-width: 600px) {
-      h1 {
-        font-size: 2rem;
+      .logo {
+        max-width: 80%;
       }
 
       h2 {
@@ -69,7 +68,7 @@
 </head>
 <body>
   <div class="overlay">
-    <h1>Dilkhush Kitchen</h1>
+    <img src="logo.png" alt="Dilkhush Kitchen Logo" class="logo" />
     <h2>Authentic Indian Cuisine</h2>
     <p>We’re cooking something special. Our website is coming soon!</p>
   </div>
