--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     body {
       font-family: 'Open Sans', sans-serif;
-      background: url('https://images.pexels.com/photos/954677/pexels-photo-954677.jpeg') no-repeat center center fixed;
+      background: url('bg.png') no-repeat center center fixed;
       background-size: cover;
       min-height: 100vh;
       display: flex;
