--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dilkhush Kitchen | Coming Soon</title>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans&display=swap" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
@@ -14,7 +14,7 @@
 
     body {
       font-family: 'Open Sans', sans-serif;
-      background: url('bg.jpeg') no-repeat center center fixed;
+      background: url('bg1.jpeg') no-repeat center center fixed;
       background-size: cover;
       min-height: 100vh;
       display: flex;
@@ -40,10 +40,10 @@
     }
 
     h2 {
-      font-size: 1.3rem;
-      font-weight: 400;
+      font-family: 'Great Vibes', cursive;
+      font-size: 2rem;
       margin-bottom: 1rem;
-      color: #f3f3f3;
+      color: #ffcc99;
     }
 
     p {
@@ -57,7 +57,7 @@
       }
 
       h2 {
-        font-size: 1.1rem;
+        font-size: 1.5rem;
       }
 
       .overlay {
@@ -70,7 +70,7 @@
   <div class="overlay">
     <img src="logo.png" alt="Dilkhush Kitchen Logo" class="logo" />
     <h2>Authentic Indian Cuisine</h2>
-    <p>We’re cooking something special. Our website is coming soon!</p>
+    <p>We're cooking something special. Our website is coming soon!</p>
   </div>
 </body>
 </html>
