change in style

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     body {
       height: 100vh;
       font-family: 'Open Sans', sans-serif;
-      background: url('https://images.pexels.com/photos/6287761/pexels-photo-6287761.jpeg') no-repeat center center fixed;
+      background: src= 'bg1.jpg' no-repeat center center fixed;
       background-size: cover;
       display: flex;
       align-items: center;
