--- a/index.html
+++ b/index.html
@@ -4,89 +4,90 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dilkhush Kitchen | Coming Soon</title>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --primary: #ffb347;
+      --background-blur: rgba(0, 0, 0, 0.6);
+    }
+
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
 
-    body {
-      height: 100vh;
-      font-family: 'Open Sans', sans-serif;
-      background: src= 'bg1.jpg' no-repeat center center fixed;
-      background-size: cover;
+    body, html {
+      height: 100%;
+      font-family: 'Inter', sans-serif;
+      background: url('https://images.pexels.com/photos/6287761/pexels-photo-6287761.jpeg') no-repeat center center / cover fixed;
       display: flex;
       align-items: center;
       justify-content: center;
-      color: white;
-      overflow: hidden;
+      color: #fff;
     }
 
-    .overlay {
-      background: rgba(0, 0, 0, 0.65);
-      border-radius: 16px;
-      padding: 3rem;
+    .container {
+      background: var(--background-blur);
+      padding: 3rem 4rem;
+      border-radius: 20px;
+      backdrop-filter: blur(10px);
       text-align: center;
-      backdrop-filter: blur(6px);
-      box-shadow: 0 0 30px rgba(255, 204, 0, 0.4);
-      transition: transform 0.4s ease, box-shadow 0.4s ease;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.5);
+      max-width: 500px;
+      width: 90%;
+      animation: fadeIn 1s ease-in-out both;
     }
 
-    .overlay:hover {
-      transform: scale(1.02);
-      box-shadow: 0 0 50px rgba(255, 204, 0, 0.6);
+    @keyframes fadeIn {
+      0% { opacity: 0; transform: translateY(20px); }
+      100% { opacity: 1; transform: translateY(0); }
     }
 
     .logo {
-      max-width: 120px;
+      width: 100px;
+      height: auto;
       margin-bottom: 1.5rem;
-      animation: float 4s ease-in-out infinite;
-    }
-
-    @keyframes float {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
     }
 
     h1 {
-      font-family: 'Great Vibes', cursive;
-      font-size: 3.5rem;
-      color: #ffcc00;
+      font-family: 'Playfair Display', serif;
+      font-size: 2.8rem;
+      color: var(--primary);
       margin-bottom: 0.5rem;
     }
 
-    h2 {
-      font-size: 1.4rem;
-      color: #f3f3f3;
+    .tagline {
+      font-size: 1.2rem;
       font-weight: 300;
+      letter-spacing: 0.5px;
+      margin-bottom: 0;
     }
 
     @media (max-width: 600px) {
-      .overlay {
+      .container {
         padding: 2rem;
       }
 
       h1 {
-        font-size: 2.5rem;
+        font-size: 2rem;
       }
 
-      h2 {
-        font-size: 1.1rem;
+      .tagline {
+        font-size: 1rem;
       }
 
       .logo {
-        max-width: 80px;
+        width: 80px;
       }
     }
   </style>
 </head>
 <body>
-  <div class="overlay">
-    <img src="logo.png" alt="Dilkhush Kitchen Logo" class="logo" />
+  <div class="container">
+    <img src="logo.png" alt="Dilkhush Kitchen Logo" class="logo">
     <h1>Dilkhush Kitchen</h1>
-    <h2>Coming Soon</h2>
+    <p class="tagline">Coming Soon</p>
   </div>
 </body>
 </html>
