--- a/index.html
+++ b/index.html
@@ -4,90 +4,100 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dilkhush Kitchen | Coming Soon</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400&display=swap" rel="stylesheet">
+  
+  <!-- Elegant fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+  
   <style>
     :root {
-      --primary: #ffb347;
-      --background-blur: rgba(0, 0, 0, 0.6);
+      --primary-color: #ffd166;
+      --overlay-blur: rgba(0, 0, 0, 0.45);
     }
 
     * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
     }
 
-    body, html {
+    html, body {
       height: 100%;
-      font-family: 'Inter', sans-serif;
-      background: url('https://images.pexels.com/photos/6287761/pexels-photo-6287761.jpeg') no-repeat center center / cover fixed;
+      font-family: 'Open Sans', sans-serif;
+      background: url('bg.jpg') no-repeat center center fixed;
+      background-size: cover;
       display: flex;
       align-items: center;
       justify-content: center;
       color: #fff;
     }
 
-    .container {
-      background: var(--background-blur);
-      padding: 3rem 4rem;
-      border-radius: 20px;
+    .overlay {
+      background: var(--overlay-blur);
       backdrop-filter: blur(10px);
-      text-align: center;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.5);
-      max-width: 500px;
+      -webkit-backdrop-filter: blur(10px);
+      border-radius: 20px;
+      padding: 3rem;
+      max-width: 550px;
       width: 90%;
-      animation: fadeIn 1s ease-in-out both;
+      text-align: center;
+      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
+      animation: fadeInUp 1s ease-out both;
     }
 
-    @keyframes fadeIn {
-      0% { opacity: 0; transform: translateY(20px); }
-      100% { opacity: 1; transform: translateY(0); }
+    @keyframes fadeInUp {
+      0% {
+        opacity: 0;
+        transform: translateY(40px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     .logo {
-      width: 100px;
+      max-width: 130px;
       height: auto;
       margin-bottom: 1.5rem;
     }
 
     h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 2.8rem;
-      color: var(--primary);
+      font-family: 'Great Vibes', cursive;
+      font-size: 3rem;
+      color: var(--primary-color);
       margin-bottom: 0.5rem;
     }
 
-    .tagline {
+    p {
       font-size: 1.2rem;
-      font-weight: 300;
-      letter-spacing: 0.5px;
-      margin-bottom: 0;
+      line-height: 1.6;
+      color: #f0f0f0;
     }
 
     @media (max-width: 600px) {
-      .container {
+      .overlay {
         padding: 2rem;
       }
 
-      h1 {
-        font-size: 2rem;
-      }
-
-      .tagline {
-        font-size: 1rem;
-      }
-
       .logo {
-        width: 80px;
+        max-width: 100px;
+      }
+
+      h1 {
+        font-size: 2.2rem;
+      }
+
+      p {
+        font-size: 1rem;
       }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <img src="logo.png" alt="Dilkhush Kitchen Logo" class="logo">
+  <div class="overlay">
+    <img src="logo.png" alt="Dilkhush Kitchen Logo" class="logo" />
     <h1>Dilkhush Kitchen</h1>
-    <p class="tagline">Coming Soon</p>
+    <p>We're cooking up something delicious.<br><strong>Coming Soon</strong></p>
   </div>
 </body>
 </html>
