--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     html, body {
       height: 100%;
       font-family: 'Open Sans', sans-serif;
-      background: url('bg.jpg') no-repeat center center fixed;
+      background: url('bg1.jpg') no-repeat center center fixed;
       background-size: cover;
       display: flex;
       align-items: center;
