change in style

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <div class="overlay">
     <img src="logo.png" alt="Dilkhush Kitchen Logo" class="logo" />
     <h1>Dilkhush Kitchen</h1>
-    <p>We're cooking up something delicious.<br><strong>Coming Soon</strong></p>
+    <p>We're cooking up something delicious.<br><strong style="color: #ffd166;">Coming Soon</strong></p>
   </div>
 </body>
 </html>
